Update: - Fixed a few bugs in backend. - Version 2023.05.01
(Previous)
- Changed most things over to Material Design 3 for cosmetic purposes.
- Nothing backend updated.
- Version 0.6 - 4/7/2023

--- a/app/src/main/res/layout-land/activity_add_record.xml
+++ b/app/src/main/res/layout-land/activity_add_record.xml
@@ -38,7 +38,7 @@
                 android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/record_date_input"
+                android:id="@+id/sc_task_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clickable="false"
