--- a/app/src/main/res/layout/popup_profile.xml
+++ b/app/src/main/res/layout/popup_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:animateLayoutChanges="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="15dp"
@@ -26,7 +27,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:theme="@style/MyAppTheme.H3">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -39,15 +41,13 @@
                         android:id="@+id/profile_username"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Username"
-                        android:textSize="20sp" />
+                        android:text="Username" />
 
                     <TextView
                         android:id="@+id/profile_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Email"
-                        android:textSize="20sp" />
+                        android:text="Email" />
 
                 </LinearLayout>
 
@@ -65,7 +65,8 @@
                 android:id="@+id/level_xp_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:theme="@style/MyAppTheme.H3">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -79,8 +80,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Level: 0"
-                        android:textSize="18sp" />
+                        android:text="Level: 0" />
 
                     <TextView
                         android:id="@+id/profile_xp"
@@ -88,8 +88,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="right"
-                        android:text="XP: 0"
-                        android:textSize="18sp" />
+                        android:text="XP: 0" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -102,8 +101,7 @@
                         android:id="@+id/current_level"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"
-                        android:textSize="18sp" />
+                        android:text="0" />
 
                     <ProgressBar
                         android:id="@+id/profile_xp_progress"
@@ -119,8 +117,7 @@
                         android:id="@+id/nxt_level"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1"
-                        android:textSize="18sp" />
+                        android:text="1" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -136,28 +133,32 @@
                 android:id="@+id/user_stats"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:theme="@style/MyAppTheme.H3">
 
                 <TextView
                     android:id="@+id/ach_earned"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Achievements: 0"
-                    android:textSize="20sp" />
+                    android:text="Achievements: 0" />
 
                 <TextView
                     android:id="@+id/records_added"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Records: 0"
-                    android:textSize="20sp" />
+                    android:text="Records: 0" />
 
                 <TextView
                     android:id="@+id/vehicles_added"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Vehicles: 0"
-                    android:textSize="20sp" />
+                    android:text="Vehicles: 0" />
+
+                <TextView
+                    android:id="@+id/tasks_added"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Tasks: 0" />
 
             </LinearLayout>
 
