--- a/app/src/main/res/layout-sw600dp-land/activity_add_record.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_add_record.xml
@@ -47,7 +47,7 @@
                 android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/record_date_input"
+                android:id="@+id/sc_task_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
