--- a/app/src/main/res/layout/activity_add_record.xml
+++ b/app/src/main/res/layout/activity_add_record.xml
@@ -6,19 +6,21 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:transitionName="transition_fab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
         tools:context=".AddRecord">
 
-        <androidx.appcompat.widget.Toolbar
+        <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/add_record_tb"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
-            android:theme="@style/ToolbarTheme" />
+            android:theme="?attr/actionBarTheme"
+            app:theme="@style/AppTheme.Toolbar"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,13 +30,6 @@
             android:layout_marginRight="15dp"
             android:layout_marginBottom="5dp"
             android:gravity="center">
-
-            <Button
-                android:id="@+id/date_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:text="Select Date" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/record_date_input"
@@ -49,7 +44,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:clickable="false"
+                    android:clickable="true"
                     android:cursorVisible="false"
                     android:focusable="true"
                     android:focusableInTouchMode="false" />
@@ -99,20 +94,21 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clickable="false"
+                android:clickable="true"
                 android:cursorVisible="false"
                 android:focusable="true"
-                android:focusableInTouchMode="false"
+                android:focusableInTouchMode="true"
                 android:hint="Vehicle">
 
                 <AutoCompleteTextView
-                    android:id="@+id/outlined_exposed_dropdown_editable"
+                    android:id="@+id/record_vehicle_options"
+                    android:inputType="text"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
-                    android:clickable="false"
+                    android:clickable="true"
                     android:cursorVisible="false"
                     android:focusable="true"
-                    android:focusableInTouchMode="false"
+                    android:focusableInTouchMode="true"
                     />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
@@ -179,7 +175,7 @@
 
             <Button
                 android:id="@+id/add_record_btn"
-                android:layout_width="@dimen/min_btn_width"
+                android:layout_width="@dimen/popout_btn_width"
                 android:layout_height="wrap_content"
                 android:text="Finish" />
         </LinearLayout>
