--- a/app/src/main/res/layout/fragment_vehicles.xml
+++ b/app/src/main/res/layout/fragment_vehicles.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:animateLayoutChanges="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
     tools:context=".ui.vehicles.VehiclesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layoutAnimation="@anim/layout_animation"
         android:id="@+id/vehicles_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
