--- a/app/src/main/res/layout/popup_filter_records.xml
+++ b/app/src/main/res/layout/popup_filter_records.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="15dp">
+    android:padding="15dp" >
 
     <TextView
         android:id="@+id/filter_records_title"
@@ -13,8 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:text="Filter Records:"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:theme="@style/MyAppTheme.H1" />
 
     <RadioGroup
         android:id="@+id/record_filter_rg"
