--- a/app/src/main/res/layout/simple_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/simple_spinner_dropdown_item.xml
@@ -3,7 +3,7 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:ellipsize="marquee"
-    android:singleLine="true"
+    android:singleLine="false"
     android:textSize="20sp"
     android:layout_height="wrap_content"
     android:padding="10dp" />
