--- a/app/src/main/res/layout/vehicle_view.xml
+++ b/app/src/main/res/layout/vehicle_view.xml
@@ -1,47 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp" >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:theme="@style/MyAppTheme.H1">
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <TextView
-            android:id="@+id/vehicle_year"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:text="Year" />
-
-        <TextView
-            android:id="@+id/vehicle_make"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:text="Make" />
+            android:orientation="horizontal"
+            android:theme="@style/MyAppTheme.H2">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/vehicle_year"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:text="Year" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:orientation="horizontal"
-        android:theme="@style/MyAppTheme.H1">
+            <TextView
+                android:id="@+id/vehicle_make"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:text="Make" />
 
-        <TextView
-            android:id="@+id/vehicle_model"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:text="Model" />
+            <TextView
+                android:id="@+id/vehicle_model"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:text="Model" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/vehicle_submodel"
@@ -49,7 +48,8 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:text="Submodel" />
+            android:text="Submodel"
+            android:theme="@style/MyAppTheme.H3" />
 
         <TextView
             android:id="@+id/vehicle_engine"
@@ -57,29 +57,32 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:text="Engine" />
+            android:text="Engine"
+            android:theme="@style/MyAppTheme.H3" />
+
+        <LinearLayout
+            android:id="@+id/vehicle_notes_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            android:theme="@style/MyAppTheme.H4">
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Notes:" />
+
+            <TextView
+                android:id="@+id/vehicle_notes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:paddingStart="10dp"
+                android:text="(Optional)" />
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:theme="@style/MyAppTheme.H3">
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Notes:" />
-
-        <TextView
-            android:id="@+id/vehicle_notes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:paddingStart="10dp"
-            android:text="(Optional)" />
-    </LinearLayout>
-
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
