--- a/app/src/main/res/layout-sw600dp-land/record_view.xml
+++ b/app/src/main/res/layout-sw600dp-land/record_view.xml
@@ -1,51 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/record_material_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
+    android:checkable="true"
+    android:clickable="true"
+    android:focusable="true" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:theme="@style/MyAppTheme.H1">
-
-        <TextView
-            android:id="@+id/record_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:text="Date" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/record_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="5dp"
-            android:text="Title" />
+            android:text="Title"
+            android:theme="@style/MyAppTheme.H2" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_marginBottom="5dp"
-        android:theme="@style/MyAppTheme.H2">
+        <TextView
+            android:id="@+id/record_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:text="Date"
+            android:theme="@style/MyAppTheme.H2" />
 
         <TextView
             android:id="@+id/record_vehicle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:text="Vehicle" />
+            android:layout_weight="1"
+            android:text="Vehicle"
+            android:theme="@style/MyAppTheme.H3" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:theme="@style/MyAppTheme.H3">
 
             <TextView
                 android:id="@+id/record_odometer"
@@ -53,35 +51,43 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
-                android:text="Odometer" />
+                android:text="Odometer"
+                android:theme="@style/MyAppTheme.H3" />
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="miles" />
+                android:layout_weight="1"
+                android:text="miles"
+                android:theme="@style/MyAppTheme.H3" />
         </LinearLayout>
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:theme="@style/MyAppTheme.H4">
-
-        <TextView
-            android:id="@+id/textView31"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:text="Notes:" />
-
-        <TextView
-            android:id="@+id/record_description"
+        <LinearLayout
+            android:id="@+id/record_notes_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="10dp"
-            android:text="Notes" />
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            android:theme="@style/MyAppTheme.H4">
+
+            <TextView
+                android:id="@+id/textView31"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:text="Notes:"
+                android:theme="@style/MyAppTheme.H4" />
+
+            <TextView
+                android:id="@+id/record_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="10dp"
+                android:text="Notes"
+                android:theme="@style/MyAppTheme.H4" />
+        </LinearLayout>
+
     </LinearLayout>
 
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
