--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,19 +45,18 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
-        app:pressedTranslationZ="12dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
         android:clickable="true"
+        android:elevation="16dp"
         android:focusable="true"
         android:transitionName="transition_fab"
         app:fabSize="normal"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_view"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/nav_host_fragment_activity_main"
+        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment_activity_main"
+        app:pressedTranslationZ="12dp"
         app:srcCompat="@drawable/ic_add_lt"
-        android:elevation="16dp"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
