--- a/app/src/main/res/layout/popup_filter_records.xml
+++ b/app/src/main/res/layout/popup_filter_records.xml
@@ -15,13 +15,25 @@
         android:text="Filter Records:"
         android:theme="@style/MyAppTheme.H1" />
 
-    <RadioGroup
-        android:id="@+id/record_filter_rg"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp">
+        android:fillViewport="true">
 
-    </RadioGroup>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <RadioGroup
+                android:id="@+id/record_filter_rg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp">
+
+            </RadioGroup>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
     <Button
         android:id="@+id/filter_cancel_button"
